--- a/youth/templates/home.html
+++ b/youth/templates/home.html
@@ -14,23 +14,24 @@
 		<h3>From</h3>
 		<div class="inputbox searchbox">
 			<input id="from" name="from" type="text" autocomplete="off" placeholder="try your hotel name or street address" />
-			<img id="from_status" src="/images/empty.png" width="16" height="16" alt="Valid" />
+			<img id="from_status" src="/images/empty.png" width="16" height="16" alt="From status" />
 		</div>
 		<h3 class="to">To</h3>
 		<div class="inputbox searchbox">
 			<input id="to" name="to" type="text" autocomplete="off" placeholder="try State Hermitage" />
-			<img id="to_status" src="/images/empty.png" width="16" height="16" alt="Valid" />
+			<img id="to_status" src="/images/empty.png" width="16" height="16" alt="To status" />
 		</div>
 		<h3 class="datetime">Date and time</h3>
 		<div class="datebox">
 			<div class="inputbox">
 				<input type="text" id="datepicker" />
+				<img src="/images/valid.png" width="16" height="16" alt="Date status" />
 			</div>
 		</div>
 		<div class="timebox">
 			<div class="inputbox">
 				<input type="text" id="timepicker" value="09:30" />
-				<img id="time_status" src="/images/empty.png" width="16" height="16" alt="Valid" />
+				<img id="time_status" src="/images/valid.png" width="16" height="16" alt="Time status" />
 			</div>
 		</div>
 		<div class="buttons">
