--- a/youth/templates/directions.html
+++ b/youth/templates/directions.html
@@ -56,6 +56,7 @@
 {% block scripts %}
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false">
 </script>
+<script src="http://open.mapquestapi.com/sdk/js/v7.0.s/mqa.toolkit.js"></script> 
 <script type="text/javascript" src="scripts/directions.js"></script>
 <script type="text/javascript" src="scripts/map.js"></script>
 {% endblock %}
