--- a/youth/templates/master/master.html
+++ b/youth/templates/master/master.html
@@ -3,7 +3,8 @@
 <head>
     {% block title %}{% endblock %}
 	<meta name="author" content="TripBenefit.com" />
-	<meta name="language" content="english">    
+	<meta name="language" content="english">
+	<link href="/favicon.ico" rel="icon" />    
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
     <script type="text/javascript" src="scripts/common.js"></script>
