--- a/static/css/main.css
+++ b/static/css/main.css
@@ -114,7 +114,7 @@ html {
     padding-right: 20px;
 }
 .pageheader {
-    background-color: #6fabe8;
+    background-color: #5F98CC;
 }
 .pageheader .pane {
     margin: auto;
@@ -130,7 +130,7 @@ html {
     margin-right: 1em;
 }
 .pageheader .logo {
-    bottom: -5px;
+    bottom: 9px;
     position: absolute;
 }
 .pageheader .menu {
@@ -192,11 +192,11 @@ html {
 }
 .gray {
     background-color: #F5F5F5;
-    background-image: -webkit-linear-gradient(top,#183293,#F1F1F1);
-    background-image: -moz-linear-gradient(top,#183293,#F1F1F1);
-    background-image: -ms-linear-gradient(top,#183293,#F1F1F1);
-    background-image: -o-linear-gradient(top,#183293,#F1F1F1);
-    background-image: linear-gradient(top,#183293,#F1F1F1);
+    background-image: -webkit-linear-gradient(top,#F5F5F5,#F1F1F1);
+    background-image: -moz-linear-gradient(top,#F5F5F5,#F1F1F1);
+    background-image: -ms-linear-gradient(top,#F5F5F5,#F1F1F1);
+    background-image: -o-linear-gradient(top,#F5F5F5,#F1F1F1);
+    background-image: linear-gradient(top,#F5F5F5,#F1F1F1);
     color: #444;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
