--- a/youth/templates/master/master.html
+++ b/youth/templates/master/master.html
@@ -9,7 +9,18 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
     <script type="text/javascript" src="scripts/common.js"></script>
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-	<link href="styles/jquery-ui-1.8.20.custom.css" rel="stylesheet" type="text/css" />    
+	<link href="styles/jquery-ui-1.8.20.custom.css" rel="stylesheet" type="text/css" />
+	<script type="text/javascript">
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-33375781-1']);
+	  _gaq.push(['_trackPageview']);
+	
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();	
+	</script>    
 </head>
 <body>
 	<div class="pageheader">
@@ -27,8 +38,7 @@
 	</div>
 	<div class="mainpane">
     {% block content %}{% endblock %}
-    </div>
-    {% include "../controls/footer.html" %}
-    {% block scripts %}{% endblock %}    
+	</div>
+    {% block scripts %}{% endblock %}       
 </body>
 </html>
