--- a/youth/templates/directions.html
+++ b/youth/templates/directions.html
@@ -1,4 +1,5 @@
 {% extends "master/master.html" %}
+{% load i18n %}
 
 {% block title %}
 <title>{{data.title}} | TripBenefit.com</title>
@@ -7,16 +8,16 @@
 {% block content %}
 <section class="itinerary">
 	<div class="buttons">	
-		<div class="blue button" onclick="window.print()">Print</div>
+		<div class="blue button" onclick="window.print()">{{"Print"|translate}}</div>
 	</div>
 	<h1>{{data.title}}</h1>
 	<div class="summary">
 		<span class="icon">
-			<img src="images/clock.png" alt="Time" width="32" height="37" />
+			<img src="/images/clock.png" alt="Time" width="32" height="37" />
 		</span>
 		<span class="time">{{data.time_text}}</span>
 		<span class="icon">
-			<img src="images/coins.png" alt="Price" width="32" height="37" />
+			<img src="/images/coins.png" alt="Price" width="32" height="37" />
 		</span>
 		<span class="price">{{data.price_text}}</span>
 	</div>
@@ -57,6 +58,6 @@
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false">
 </script>
 <script src="http://open.mapquestapi.com/sdk/js/v7.0.s/mqa.toolkit.js"></script> 
-<script type="text/javascript" src="scripts/directions.js"></script>
-<script type="text/javascript" src="scripts/map.js"></script>
+<script type="text/javascript" src="/scripts/directions.js"></script>
+<script type="text/javascript" src="/scripts/map.js"></script>
 {% endblock %}
