--- a/youth/templates/master/master.html
+++ b/youth/templates/master/master.html
@@ -1,15 +1,17 @@
+{% load i18n %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang='{{"LANGUAGE"|translate}}'>
 <head>
     {% block title %}{% endblock %}
 	<meta name="author" content="TripBenefit.com" />
-	<meta name="language" content="english">
+	<meta name="language" content='{{"LANGUAGE_FULL"|translate}}'>
 	<link href="/favicon.ico" rel="icon" />    
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="scripts/common.js"></script>
-    <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-	<link href="styles/jquery-ui-1.8.20.custom.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/scripts/common.js"></script>
+    <link href="/styles/main.css" rel="stylesheet" type="text/css"/>
+	<link href="/styles/jquery-ui-1.8.20.custom.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-33375781-1']);
@@ -26,12 +28,12 @@
 	<div class="pageheader">
 		<div class="pane">
 			<div class="logo">
-				<a href="/"><img src="images/logo.png" alt="TripBenefit.com" /></a>
+				<a href="/"><img src="/images/logo.png" alt="TripBenefit.com" /></a>
 			</div>
 			<div class="menu">
 				<ul>
-            		<li {% ifequal request.path "/" %}class="active"{% endifequal %}><a href="/">Home</a></li>
-            		<li {% ifequal request.path "/about" %}class="active"{% endifequal %}><a href="/about">About</a></li>
+            		<li {% ifequal active_page 'home' %}class="active"{% endifequal %}><a href="/{{'LANGUAGE'|translate}}">{{"Home"|translate}}</a></li>
+            		<li {% ifequal active_page 'about' %}class="active"{% endifequal %}><a href="/{{'LANGUAGE'|translate}}/about">{{"About"|translate}}</a></li>
           		</ul>								
 			</div>
 		</div>
