--- a/youth/templates/directions.html
+++ b/youth/templates/directions.html
@@ -25,7 +25,7 @@
 	{% for step in data.steps %}
 	<div class="step">
 		<div class="info">
-			<div class="time">{{step.start_time}}</div>
+			<div class="time">{{step.start_time}}&nbsp;</div>
 			<div class="hint">{{step.hint}}</div>
 		</div>
 		<div class="instuction">
