--- a/youth/templates/directions.html
+++ b/youth/templates/directions.html
@@ -55,7 +55,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false">
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false&language={{'LANGUAGE'|translate}}">
 </script>
 <script src="http://open.mapquestapi.com/sdk/js/v7.0.s/mqa.toolkit.js"></script> 
 <script type="text/javascript" src="/scripts/directions.js"></script>
