--- a/youth/templates/about_ru.html
+++ b/youth/templates/about_ru.html
@@ -1,7 +1,7 @@
 {% extends "master/master.html" %}
 
 {% block title %}
-<title>About TripBenefit.com</title>
+<title>О сайте TripBenefit.com</title>
 {% endblock %}
 
 {% block content %}
@@ -18,7 +18,8 @@
 удовлетворяет нас в большинстве случаев.</p>
 	    <p>Мы, создатели данного сайта, всю жизнь прожили в Санкт-Петербурге и можем оценить
 насколько полученный результат реалистичен. Оцените и вы! Присылайте любые
-комментарии, замечания, предложения на наш почтовый адрес help@tripbenefit.com.</p>
+комментарии, замечания, предложения на наш почтовый адрес <a href="mailto:help@tripbenefit.com" target="_blank">help@tripbenefit.com</a> или в 
+<a href="http://www.facebook.com/TripBenefit" target="_blank">группу в фейсбуке</a>.</p>
 	    <p>Мы искренне надеемся, что наша работа будет полезна как для жителей города, так и
 гостей Санкт-Петербурга. Мы рассчитываем, что наш сервис поможет Вам сэкономить
 ваши деньги и, главное, время. Мы добавили список достопримечательностей, а также
