--- a/youth/templates/home.html
+++ b/youth/templates/home.html
@@ -13,6 +13,12 @@
 		<h2>{{"First time in St. Petersburg"|translate}}?</h2>
 		<h2>{{"Get transport directions here"|translate}}!</h2>
 	</div>
+	<div class="right_box attention">
+    	<h4><a href="/{{'LANGUAGE'|translate}}/booking-com">{{"2 discount on Booking.com"|translate}}</a></h4>
+    	<div>
+    		{{"We will return a part of your payment to your e-wallet"|translate}}       		
+    	</div>
+  	</div>
 	<form class="homeform">
 		<h3>{{"From"|translate}}</h3>
 		<div class="inputbox searchbox">
