--- a/youth/templates/master/master.html
+++ b/youth/templates/master/master.html
@@ -44,6 +44,9 @@
 						<li {% ifequal active_page 'about' %}class="active"{% endifequal %}>
 							<a href="/{{'LANGUAGE'|translate}}/about">{{"About"|translate}}</a>
 						</li>
+						<li>
+							<a href="http://blog.tripbenefit.com">{{"Blog"|translate}}</a>
+						</li>
 						<li class="language">
 							{% autoescape off %}{{switch_language_page}}{% endautoescape %}
 						</li>
@@ -71,7 +74,7 @@
 					<h4>{{"Special offers"|translate}}</h4>
 					<ul>
 						<li>
-							<a href="/{{'LANGUAGE'|translate}}/booking-com">{{"2% discount on Booking.com"|translate}}</a>
+							<a href="/{{'LANGUAGE'|translate}}/booking-com">{{"2 discount on Booking.com"|translate}}</a>
 						</li>
 					</ul>
 				</div>
